
name:               music-util
version:            0.5
cabal-version:      >= 1.10
author:             Hans Hoglund
maintainer:         Hans Hoglund <hans@hanshoglund.se>
license:            BSD3
license-file:       COPYING
synopsis:           To be written
category:           
tested-with:        GHC
build-type:         Simple

description:
    Utility program for installing and developing the music suite.

source-repository head
    type:               git
    location:           git://github.com/hanshoglund/music-util.git

executable "music-util"
    build-depends:
        base            >= 4 && < 5,
        text,
        containers,
        shelly
    hs-source-dirs:     src
    default-language:   Haskell2010
    main-is:
        music-util.hs
